--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -18,8 +18,9 @@
 </script>
 
 </body>
-<script charset="utf-8" th:src="@{/common.js}"></script>
+<script charset="UTF-8" th:src="@{/jquery.min.js}"></script>
 <script charset="utf-8" th:src="@{/layui/layui.js}"></script>
+<script charset="utf-8" th:src="@{/common.js}"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
